--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 footer {
-  background-color: var(--light-color);
+  background-color: green;
   font-size: var(--body-font-size-xs);
 }
 
@@ -11,6 +11,7 @@ footer .footer > div {
 
 footer .footer p {
   margin: 0;
+  color: white;
 }
 
 @media (width >= 900px) {
